eclipse_ws_in_docker/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:00:37 **** Build of configuration Debug for project openssl_trial ****
make all 
Building file: ../main.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
../main.c: In function 'main':
../main.c:48:5: warning: implicit declaration of function 'sleep' [-Wimplicit-function-declaration]
     sleep(20);
     ^
Finished building: ../main.c
 
Building target: openssl_trial
Invoking: Cross GCC Linker
gcc  -o "openssl_trial"  ./main.o   -lcrypto -lconfig
Finished building target: openssl_trial
 
14:00:52 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
Building file: ../main.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: openssl_trial
Invoking: Cross GCC Linker
gcc  -o "openssl_trial"  ./main.o   -lcrypto -lconfig
Finished building target: openssl_trial
 
14:00:55 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
make: Nothing to be done for 'all'.
14:01:32 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
make: Nothing to be done for 'all'.
14:01:49 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
make: Nothing to be done for 'all'.
23:59:49 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
Building file: ../main.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
../main.c: In function 'sae_initialize':
../main.c:220:27: warning: left-hand operand of comma expression has no effect [-Wunused-value]
                 " bytes\n", curr->group_num, BN_num_bytes(curr->prime));
                           ^
../main.c:220:44: warning: left-hand operand of comma expression has no effect [-Wunused-value]
                 " bytes\n", curr->group_num, BN_num_bytes(curr->prime));
subdir.mk:18: recipe for target 'main.o' failed
                                            ^
../main.c:220:44: warning: value computed is not used [-Wunused-value]
../main.c:220:71: error: expected ';' before ')' token
                 " bytes\n", curr->group_num, BN_num_bytes(curr->prime));
                                                                       ^
../main.c:220:71: error: expected statement before ')' token
make: *** [main.o] Error 1
00:00:13 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
Building file: ../main.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: openssl_trial
Invoking: Cross GCC Linker
gcc  -o "openssl_trial"  ./main.o   -lcrypto -lconfig
Finished building target: openssl_trial
 
00:03:04 **** Incremental Build of configuration Debug for project openssl_trial ****
make all 
Building file: ../main.c
Invoking: Cross GCC Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.d" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: openssl_trial
Invoking: Cross GCC Linker
gcc  -o "openssl_trial"  ./main.o   -lcrypto -lconfig
Finished building target: openssl_trial
 
